--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -72,14 +72,14 @@
             </div>
           </div>
         </div>
-        <div id="additional-settings">
-          <div id="details">
+        <details id="additional-settings">
+          <summary id="details">
 
             <i class="line"></i>
-            <p id="small-title">Erweiterte Einstellungen</p>
+            <p id="small-detail-title">Erweiterte Einstellungen</p>
             <i class="line"></i>
 
-          </div>
+          </summary>
           <div id="a-d-content">
             <div id="save-local">
   
@@ -97,16 +97,16 @@
   
             </div>
           </div>
-        </div>
+        </details>
         <div id="start-stop">
           <div id="start">
 
-            <input type="button" value="Starten" id="start-btn">
+            <button id="start-btn">Starten</button>
 
           </div>
           <div id="stop">
 
-            <input type="button" value="Stoppen" id="stop-btn">
+            <button id="stop-btn">Stoppen</button>
 
           </div>
         </div>
