--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <link rel="stylesheet" href="src/stylesheet/index/index.min.css">
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <script src="src/js/lib/jquery.min.js"></script>
@@ -21,7 +22,7 @@
             <i></i>
           </label>
         </div>
-        <h2 id="logo" class="big-title">IAC</h2>
+        <h2 id="logo" class="big-title">Instagram Automated Commenting</h2>
         <div id="signal">
           <a href="" id="signal-img"><img src="src/img/icons/signal.png" alt="Image of the signal icon"></a>
         </div>
@@ -30,7 +31,7 @@
         <a href="" id="settings"><img src="src/img/icons/settings.svg" alt="Image of the settings icon"></a>
         <a href="" id="theme"><img src="src/img/icons/moon.png" alt="Image of the moon for changing to dark mode"></a>
         <a href="" id="profile"><img src="src/img/icons/profile.png" alt="Image of the profile icon"></a>
-        <a href="" id="info bottom"><img src="src/img/icons/info.svg" alt="Image of the info icon"></a>
+        <a href="" id="info"><img src="src/img/icons/info.svg" alt="Image of the info icon"></a>
       </div>
     </nav>
     <main>
@@ -39,7 +40,7 @@
           <div id="post-url">
 
             <label for="big-form" class="title">
-              <h2 class="big-title">IG Post URL
+              <h2 class="big-title">Instagram Post URL
                 <span class="hint--right" aria-label="Kopiere die URL des Instagram Posts und füge sie hier ein.">
                   <img src="src/img/icons/help.png" alt="Image of the help icon" class="help">
                 </span>
