--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- META -->
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
+    <!-- CSS -->
     <link rel="stylesheet" href="src/stylesheet/index/index.min.css">
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
+    <!-- JS -->
     <script src="src/js/lib/jquery.min.js"></script>
     <script async src="src/js/cursor.js"></script>
     <script defer src="src/js/index.js"></script>
@@ -21,6 +24,7 @@
             <i></i>
             <i></i>
           </label>
+          <i id="small-line"></i>
         </div>
         <h2 id="logo" class="big-title">Instagram Automated Commenting</h2>
         <div id="signal">
