--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
     <!-- CSS -->
-    <link rel="stylesheet" href="src/stylesheet/index-ui/index.min.css">
+    <link rel="stylesheet" href="src/stylesheet/index-ui/index.css">
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
