--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -48,22 +48,28 @@
     </header>
     <nav>
       <div id="side-bar">
-        <a href="" id="comment" class="active">
-          <img src="src/img/icons/run.svg" alt="Image of the run icon">
-          <p>Kommentieren</p>
-        </a>
-        <a href="" id="profile">
-          <img src="src/img/icons/profile.svg" alt="Image of the profile icon">
-          <p>Benutzerprofil</p>
-        </a>
-        <a href="" id="theme">
-          <img src="src/img/icons/theme.svg" alt="Image of the moon for changing the color theme">
-          <p>Dunkles Design</p>
-        </a>
-        <a href="" id="help">
-          <img src="src/img/icons/help.svg" alt="Image of the help icon">
-          <p>Hilfe</p>
-        </a>
+        <div id="upper-content">
+          <a href="" id="comment" class="active">
+            <i class="line"></i>
+            <img src="src/img/icons/run.svg" alt="Image of the run icon">
+            <p>Kommentieren</p>
+          </a>
+          <a href="" id="profile">
+            <i class="line"></i>
+            <img src="src/img/icons/profile.svg" alt="Image of the profile icon">
+            <p>Benutzerprofil</p>
+          </a>
+          <a href="" id="theme">
+            <i class="line"></i>
+            <img src="src/img/icons/theme.svg" alt="Image of the moon for changing the color theme">
+            <p>Dunkles Design</p>
+          </a>
+          <a href="" id="help">
+            <i class="line"></i>
+            <img src="src/img/icons/help.svg" alt="Image of the help icon">
+            <p>Hilfe</p>
+          </a>
+        </div>
         <footer>
           <a href="" id="wifi">
             <img src="src/img/icons/wifi-good.svg" alt="Image of the wifi icon">
@@ -115,7 +121,7 @@
               </label>       
 
               <input type="password" id="password-form" class="medium-form" placeholder="••••••••••••••••••••••••••••••" required>
-              <label for="toggle" id="togglePW"></label>
+              <label for="toggle" id="togglePW"><img src="src/img/icons/eye.svg" alt="" srcset=""></label>
               <input type="checkbox" id="toggle" onclick="togglePassword()">
 
             </div>
