--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -121,7 +121,7 @@
               </label>       
 
               <input type="password" id="password-form" class="medium-form" placeholder="••••••••••••••••••••••••••••••" required>
-              <label for="toggle" id="togglePW"><img src="src/img/icons/eye.svg" alt="" srcset=""></label>
+              <label for="toggle" id="togglePW"><img src="src/img/icons/eye.svg" alt="" srcset=""></label>
               <input type="checkbox" id="toggle" onclick="togglePassword()">
 
             </div>
