Updated icons, animation and ui

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -49,35 +49,35 @@
     <nav>
       <div id="side-bar">
         <div id="upper-content">
-          <a href="" id="comment" class="active">
+          <a class="comment" id="active">
             <i class="line"></i>
             <img src="src/img/icons/run.svg" alt="Image of the run icon">
-            <p>Kommentieren</p>
+            <p class="navText">Kommentieren</p>
           </a>
-          <a href="" id="profile">
+          <a href="" class="profile">
             <i class="line"></i>
             <img src="src/img/icons/profile.svg" alt="Image of the profile icon">
-            <p>Benutzerprofil</p>
+            <p class="navText">Benutzerprofil</p>
           </a>
           <a href="" id="theme">
             <i class="line"></i>
             <img src="src/img/icons/theme.svg" alt="Image of the moon for changing the color theme">
-            <p>Dunkles Design</p>
+            <p class="navText">Dunkles Design</p>
           </a>
-          <a href="" id="help">
+          <a href="" class="help-tab">
             <i class="line"></i>
             <img src="src/img/icons/help.svg" alt="Image of the help icon">
-            <p>Hilfe</p>
+            <p class="navText">Hilfe</p>
           </a>
         </div>
         <footer>
           <a href="" id="wifi">
             <img src="src/img/icons/wifi-good.svg" alt="Image of the wifi icon">
-            <p>21,6 mbit/s</p>
+            <p class="navText"><span id="changeText">- -</span> mb/s</p>
           </a>
-          <a href="" id="settings">
+          <a href="" class="settings">
             <img src="src/img/icons/settings.svg" alt="Image of the settings icon">
-            <p>Einstellungen</p>
+            <p class="navText">Einstellungen</p>
           </a>
         </footer>
       </div>
@@ -121,7 +121,7 @@
               </label>       
 
               <input type="password" id="password-form" class="medium-form" placeholder="••••••••••••••••••••••••••••••" required>
-              <label for="toggle" id="togglePW"><img src="src/img/icons/eye.svg" alt="" srcset=""></label>
+              <label for="toggle" id="togglePW"><img src="src/img/icons/eye.svg" alt="" srcset=""></label>
               <input type="checkbox" id="toggle" onclick="togglePassword()">
 
             </div>
