Updated wifi icons

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -59,7 +59,7 @@
             <img src="src/img/icons/profile.svg" alt="Image of the profile icon">
             <p class="navText">Benutzerprofil</p>
           </a>
-          <a href="" id="theme">
+          <a id="theme">
             <i class="line"></i>
             <img src="src/img/icons/theme.svg" alt="Image of the moon for changing the color theme">
             <p class="navText">Dunkles Design</p>
@@ -71,8 +71,8 @@
           </a>
         </div>
         <footer>
-          <a href="" id="wifi">
-            <img src="src/img/icons/wifi-good.svg" alt="Image of the wifi icon">
+          <a id="wifi">
+            <img id="wifi-img" src="src/img/icons/wifi/wifi-good.svg" alt="Image of the wifi icon">
             <p class="navText"><span id="changeText">- -</span> mb/s</p>
           </a>
           <a href="" class="settings">
