Updated UI and animation

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
     <!-- CSS -->
+    <link rel="stylesheet" href="src/stylesheet/color.css">
     <link rel="stylesheet" href="src/stylesheet/index-ui/index.css">
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
@@ -64,12 +65,12 @@
           <a id="theme-to-dark">
             <i class="line"></i>
             <img id="themeIcon" src="src/img/icons/light/theme.svg" alt="Image of the moon for changing the color theme">
-            <p class="navText">Dunkles Design</p>
+            <p class="navText">Dunkles <span class="second-text">Design</span></p>
           </a>
           <a id="theme-to-light">
             <i class="line"></i>
             <img id="themeIcon" src="src/img/icons/dark/theme.svg" alt="Image of the moon for changing the color theme">
-            <p class="navText">Helles Design</p>
+            <p class="navText">Helles <span class="second-text">Design</span></p>
           </a>
           <a href="" class="help-tab">
             <i class="line"></i>
@@ -80,7 +81,7 @@
         <footer>
           <a id="wifi">
             <img id="wifi-img" src="src/img/icons/light/wifi/wifi-good.svg" alt="Image of the wifi icon">
-            <p class="navText"><span id="changeText">- -</span> mb/s</p>
+            <p class="navText"><span id="changeText">- -</span> <span class="second-text">mb/s</span></p>
           </a>
           <a href="" class="settings">
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
@@ -98,7 +99,7 @@
               <label for="big-form" class="title">
                 <h2 class="big-title">Instagram Post URL
                   <span class="hint--right" aria-label="Kopiere die URL des Instagram Posts und füge sie hier ein.">
-                    <img src="src/img/icons/light/help-small.svg" alt="Image of the help icon" class="help">
+                    <img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info">
                   </span>
                 </h2>
               </label>
@@ -111,7 +112,7 @@
                 <label for="username-form" class="title">
                   <h2 class="big-title">Benutzername
                     <span class="hint--right" aria-label="Gib den Benutzername (d)eines Instagram Kontos ein.">
-                      <img src="src/img/icons/light/help-small.svg" alt="Image of the help icon" class="help">
+                      <img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info">
                     </span>
                   </h2>
                 </label>
@@ -122,8 +123,8 @@
 
                 <label for="password-form" class="title">
                   <h2 class="big-title">Passwort
-                    <span class="hint--right" aria-label="Passwort vergessen? Besuche www.instagram.com/accounts/password/reset">
-                      <img src="src/img/icons/light/help-small.svg" alt="Image of the help icon" class="help">
+                    <span class="hint--right" aria-label="Setze mit einem Klick dein Instagram Passwort zurück">
+                      <a href="https://instagram.com/accounts/password/reset" target="_blank"><img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info"></a>
                     </span>
                   </h2>
                 </label>       
@@ -149,7 +150,7 @@
                 <input type="checkbox" name="save-local" id="save-profile">
                 <label for="save-profile" class="medium-title">Profil lokal speichern
                   <span class="hint--right hint--medium" aria-label="Die Anmeldedaten werden lokal abgespeichert, damit du nächstes Mal direkt loslegen kannst.">
-                    <img src="src/img/icons/light/help-small.svg" alt="Image of the help icon" class="help">
+                    <img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info">
                   </span>
                 </label>
     
