--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -126,6 +126,7 @@
                   <h2 class="big-title">Passwort
                     <span class="hint--right" aria-label="Setze mit einem Klick dein Instagram Passwort zurück">
                       <a href="https://instagram.com/accounts/password/reset" target="_blank"><img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info"></a>
+                      <!-- Target="_blank" für WebDemo-->
                     </span>
                   </h2>
                 </label>       
