--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -11,16 +11,16 @@
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/lib/jquery.min.js"></script>
-    <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/cursor.js"></script>
-    <script defer src="src/js/index.js"></script>
+    <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/nav.js"></script>
     <script defer src="titleBar.js"></script>
+    
+    <script defer src="src/js/index.js"></script>
     <script>if (window.module) module = window.module;</script>
     <title>Instagram Automated Commenting</title>
   </head>
   <body>
-    <div id="test">
     <header id="titlebar">
       <div id="drag-region">
 
@@ -179,6 +179,22 @@
         </div>
       </form>
     </main>
+    <div id="info-banner">
+      <div id="info-content">
+        <div id="info-icon"><img id="info-icon-img" src="src/img/icons/dark/note-info.svg" alt="Icon of the info banner"></div>
+        <div id="info-title">Information</div>
+        <div id="info-info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div id="info-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for the info banner"></div>
+      </div>
+    </div>
+    <div id="warning-banner">
+      <div id="warning-content">
+        <div id="warning-icon"><img id="warning-icon-img" src="src/img/icons/dark/note-important.svg" alt="Icon of the warning banner"></div>
+        <div id="warning-title">Warnung</div>
+        <div id="warning-info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div id="warning-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for the warning banner"></div>
+      </div>
+    </div>
     <div id="error-banner">
       <div id="error-content">
         <div id="error-icon"><img id="error-icon-img" src="src/img/icons/dark/clear.svg" alt="Error icon"></div>
@@ -188,8 +204,7 @@
         <div id="error-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
     </div>
-    <p id="legal-note">Not the final version - Work in progress</p>
+    <p id="legal-note">Work in progress - © 2021 by JueK3y</p>
     <div class="small-cursor"></div>
-  </div>
   </body>
 </html>
