--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -149,7 +149,7 @@
             <div id="a-d-content">
               <div id="save-local">
     
-                <input type="checkbox" name="save-local" id="save-profile">
+                <input type="checkbox" name="save-local" id="save-profile" class="save-profile-light">
                 <label for="save-profile" class="medium-title">Profil lokal speichern
                   <span class="hint--right hint--medium" aria-label="Die Anmeldedaten werden lokal abgespeichert, damit du nächstes Mal direkt loslegen kannst.">
                     <img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info">
