Added banner function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -11,6 +11,7 @@
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/lib/jquery.min.js"></script>
+    <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/nav.js"></script>
@@ -167,12 +168,12 @@
           <div id="start-stop">
             <div id="start">
               
-              <button id="start-btn">Starten</button>
+              <button type="button" id="start-btn" href="#">Starten</button>
 
             </div>
             <div id="stop">
 
-              <button id="stop-btn">Stoppen</button>
+              <button type="button" id="stop-btn">Stoppen</button>
 
             </div>
           </div>
@@ -198,8 +199,8 @@
     <div id="error-banner">
       <div id="error-content">
         <div id="error-icon"><img id="error-icon-img" src="src/img/icons/dark/clear.svg" alt="Error icon"></div>
-        <div id="error-title">Kein Internet</div>
-        <div id="error-info">Überprüfe deine Internet-Verbindung.</div>
+        <div id="error-title">Fehler</div>
+        <div id="error-info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
         <button id="error-hide" title="Stelle diese Nachricht ab">Deaktivieren</button>
         <div id="error-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
